# neezy-studio

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  components.json  dev-error.txt  drizzle-studio-snapshot.yml  drizzle.config.ts  electron.vite.config.ts  knip.json  package.json  tsconfig.electron.json  tsconfig.json  tsconfig.web.json  vite.config.ts
.claude/: MEMORY.md  settings.json  settings.local.json
app/: app.css  root.tsx  routes.ts
app/agents/: agent-loop.ts  content-agent.ts  llm-agent.ts  webllm-agent.ts
app/components/: animated-bg.tsx  animation-effects.tsx  app-shell.tsx  download-screen.tsx  llm-model-browser.tsx  markdown-content.tsx  model-browser.tsx  model-card.tsx  model-oracle-panel.tsx  (+5 more)
docs/: pi-agent-architecture.md  pi-compaction-deep-dive.html  playbook-场景与编排架构.md  存储分层.md  小红书博主AI运营工作台 · 最终端侧版产品文档.md
drizzle/: 0000_lying_reavers.sql  0000_workable_ken_ellis.sql  0001_fantastic_redwing.sql  0001_sessions.sql  0001_smiling_moonstone.sql  0002_kind_shockwave.sql  0002_libsql_vectors.sql  0002_settings.sql  0003_fancy_warstar.sql  0003_memory_vectors.sql
electron/: chat-llm-runtime.ts  embedding-runtime.cjs  embedding-runtime.ts  gpu-inspect.ts  ipc-handlers.cjs  ipc-handlers.ts  llm-insights-policy.ts  llm-load-policy.ts  main.cjs  main.ts  model-catalog.cjs  model-catalog.ts  model-download.cjs  model-download.ts  model-filename.ts  model-recommendations.cjs  model-recommendations.ts  model-scan.cjs  model-scan.ts  model-uri.ts  nlc-dist-loader.ts  nlc-insights-options.ts  node-llama-runtime.ts  pi-agent.ts  preload.cjs  preload.ts  sqlite-runtime.cjs  sqlite-runtime.ts  storage-paths.cjs  storage-paths.ts  types.ts  vector-fallback.cjs
scripts/: db-inspect.mjs  db-studio.mjs  fetch-ollama-binaries.sh  free-dev-ports.mjs  reset-local-db.mjs  resolve-app-data-roots.mjs  resolve-app-database.mjs
sidecar-app/: index.ts  package.json
src-tauri/: Cargo.toml  download_ollama.ps1  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  llm_runtime.rs  main.rs  system.rs  types.rs
src-tauri/src/agent/: memory.rs  mod.rs  react.rs  skill.rs
src-tauri/src/llm/: mod.rs  model.rs  tokenizer.rs
src-tauri/src/models/: download.rs  hf.rs  mod.rs  resolve.rs
src-tauri/src/storage/: db.rs  settings.rs
(+326 files in other folders)
